--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -29,6 +29,7 @@
 </RelativeLayout>
 
     <ListView
+        android:background="#fff"
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
